lox-tests/tests/field/get_on_string.stderr
ERROR: Only class instances have properties
 --> 1:1
  |
1 | "str".foo; // expect runtime error: Only instances have properties.
  | ^-------^
